Colaboratory kullanılarak oluşturuldu

--- a/Densenet.ipynb
+++ b/Densenet.ipynb
@@ -6,8 +6,8 @@
       "name": "Densenet",
       "provenance": [],
       "collapsed_sections": [],
-      "mount_file_id": "1Lty2aRzwo3g3Ga7C-R-FGox4sHvRMfkn",
-      "authorship_tag": "ABX9TyPanK1DEVJL+oLTQfXHVjFE",
+      "mount_file_id": "1zBtoe3dYiTv8FH2DrdT2o0AiNJdOMnjY",
+      "authorship_tag": "ABX9TyOTv4Knk6FPrmmdiA6+PZ0n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,44 +55,38 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a3081d5e-4890-427b-eb97-dabc38b1490b"
+        "outputId": "57dd4a39-7526-4898-9e8a-ee0bafb779ce"
       },
       "source": [
         "import numpy as np \n",
         "import pandas as pd\n",
-        "from keras.optimizers import SGD\n",
         "from keras.preprocessing import image\n",
-        "from os.path import join\n",
         "from PIL import Image\n",
         "from scipy import misc\n",
+        "import seaborn as sns\n",
         "from keras.models import Sequential\n",
         "import tensorflow as tf\n",
         "import matplotlib.pyplot as plt\n",
         "from keras.preprocessing.image import ImageDataGenerator\n",
         "from keras.preprocessing import image\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from keras.layers import Input, Dense, Convolution2D, MaxPooling2D, UpSampling2D, Softmax, ZeroPadding2D\n",
+        "from keras.layers import Input, Dense, Convolution2D, MaxPooling2D, UpSampling2D, Softmax, ZeroPadding2D, GlobalAveragePooling2D,BatchNormalization, Flatten\n",
         "from tensorflow.keras import datasets, layers, models\n",
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
         "from keras.layers.core import Flatten, Dense, Dropout \n",
-        "from keras.layers import Dense, Conv2D, MaxPool2D , Flatten\n",
-        "from tensorflow.keras.applications.vgg16 import VGG16\n",
         "from tensorflow.keras.preprocessing import image\n",
-        "from tensorflow.keras.applications.vgg16 import preprocess_input\n",
-        "from tensorflow.keras.utils import plot_model\n",
-        "from keras.preprocessing.image import load_img\n",
-        "from keras.preprocessing.image import img_to_array\n",
-        "from keras.applications.vgg16 import preprocess_input\n",
-        "from keras.applications.vgg16 import decode_predictions\n",
-        "from keras.applications.vgg16 import VGG16\n",
-        "from keras.optimizers import Adam\n",
-        "from sklearn.metrics import plot_confusion_matrix\n",
-        "from keras.applications.vgg19 import VGG19\n",
+        "from keras.optimizers import Adam, SGD, Adamax, Adagrad\n",
         "from tensorflow.keras.applications import DenseNet121\n",
-        "from tensorflow.keras.layers import GlobalAveragePooling2D,BatchNormalization\n",
         "from tensorflow.keras.models import Model\n",
         "from tensorflow.keras.applications.densenet import preprocess_input\n",
+        "from keras.callbacks import ModelCheckpoint, ReduceLROnPlateau\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
         "\n",
         "train_datagen = ImageDataGenerator(\n",
         "        rescale=1./255,\n",
@@ -118,13 +112,33 @@
         "        batch_size=32,\n",
         "        class_mode='categorical')\n",
         "\n",
+        "test_generator = test_datagen.flow_from_directory(\n",
+        "        '/content/drive/MyDrive/Colab Notebooks/Train',\n",
+        "        target_size=(224, 224),\n",
+        "        batch_size=32,\n",
+        "        class_mode='categorical')\n",
+        "\n",
+        "validation_datagen = ImageDataGenerator(rescale=1./255)\n",
+        "\n",
+        "validation_generator = validation_datagen.flow_from_directory(\n",
+        "        '/content/drive/MyDrive/Colab Notebooks/Train',\n",
+        "        target_size=(224, 224),\n",
+        "        batch_size=32,\n",
+        "        class_mode='categorical')\n",
+        "y_pred = model.predict(test_generator)\n",
+        "\n",
+        "STEP_SIZE_TRAIN=train_generator.n//train_generator.batch_size\n",
+        "STEP_SIZE_VALID=validation_generator.n//validation_generator.batch_size\n",
+        "\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "Found 13536 images belonging to 2 classes.\n",
+            "Found 13536 images belonging to 2 classes.\n",
             "Found 13536 images belonging to 2 classes.\n",
             "Found 13536 images belonging to 2 classes.\n"
           ],
@@ -135,22 +149,43 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BcCTJdjnUEVZ"
+        "id": "gEBnmsaYiI_z"
       },
       "source": [
+        "def build_densenet121():\n",
+        "    densenet = DenseNet121(weights='imagenet', include_top=False)\n",
         "\n",
+        "    input = Input(shape=(SIZE, SIZE, N_ch))\n",
+        "    x = Conv2D(3, (3, 3), padding='same')(input)\n",
+        "    \n",
+        "    x = densenet(x)\n",
+        "    \n",
+        "    x = GlobalAveragePooling2D()(x)\n",
+        "    x = BatchNormalization()(x)\n",
+        "    x = Dropout(0.5)(x)\n",
+        "    x = Dense(256, activation='relu')(x)\n",
+        "    x = BatchNormalization()(x)\n",
+        "    x = Dropout(0.5)(x)\n",
         "\n",
-        "STEP_SIZE_TRAIN=train_generator.n//train_generator.batch_size\n",
-        "STEP_SIZE_VALID=validation_generator.n//validation_generator.batch_size\n",
+        "    # multi output\n",
+        "    output = Dense(2,activation = 'softmax', name='root')(x)\n",
+        " \n",
         "\n",
-        "model = DenseNet121(include_top= True, weights='imagenet', input_shape=(224,224,3))\n",
-        "x = model.output\n",
-        "predictions = Dense(2, activation='softmax')(x)\n",
-        "model = Model(inputs = model.input, outputs=predictions)\n",
-        "for layer in model.layers:\n",
-        "    layer.trainable = False\n",
+        "    # model\n",
+        "    model = Model(input,output)\n",
+        "    \n",
+        "    optimizer = Adam(lr=0.002, beta_1=0.9, beta_2=0.999, epsilon=0.1, decay=0.0)\n",
+        "    model.compile(loss='categorical_crossentropy', optimizer=optimizer, metrics=['accuracy'])\n",
+        "    model.summary()\n",
+        "    history = model.fit(train_generator,\n",
+        "                    steps_per_epoch=STEP_SIZE_TRAIN,\n",
+        "                    epochs=10,\n",
+        "                    validation_data=validation_generator,\n",
+        "                    validation_steps=STEP_SIZE_VALID)\n",
+        "    \n",
+        "    return model\n",
         "\n",
-        "\n"
+        "model=build_densenet121()"
       ],
       "execution_count": null,
       "outputs": []
@@ -158,41 +193,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "h7r5MwOkVoco"
+        "id": "BcCTJdjnUEVZ"
       },
       "source": [
         "\n",
+        "model = DenseNet121(include_top= True, weights='imagenet', input_shape=(224,224,3))\n",
+        "\n",
+        "x = model.output\n",
+        "predictions = Dense(2, activation='softmax')(x)\n",
+        "model = Model(inputs = model.input, outputs=predictions)\n",
+        "\n",
+        "for layer in model.layers:\n",
+        "    layer.trainable = False\n",
+        "\n",
         "model.compile(optimizer='Adam',loss='categorical_crossentropy',metrics=['accuracy'])\n",
-        "#model.summary()\n",
         "\n",
         "history = model.fit(train_generator,\n",
         "                    steps_per_epoch=STEP_SIZE_TRAIN,\n",
         "                    epochs=10,\n",
         "                    validation_data=validation_generator,\n",
-        "                    validation_steps=STEP_SIZE_VALID)\n",
-        "\n",
-        "#plot_confusion_matrix(model, train_generator, validation_genarator)  \n",
-        "#plt.show()  "
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zo35jpjZPwEV"
-      },
-      "source": [
-        "model=build_densenet121()\n",
-        "# Modelimizi görselleştirelim\n",
-        "from keras.utils import plot_model\n",
-        "\n",
-        "plot_model(model, \n",
-        "           show_shapes = True, \n",
-        "           show_layer_names = True, \n",
-        "           rankdir = 'TB', \n",
-        "           expand_nested = False, \n",
-        "           dpi = 60)"
+        "                    validation_steps=STEP_SIZE_VALID)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -205,7 +225,7 @@
       "source": [
         "plt.plot(history.history['accuracy'],color = 'red')\n",
         "plt.plot(history.history['val_accuracy'],color = 'blue')\n",
-        "plt.title('Model Accuracy')\n",
+        "plt.title('Densenet 121 Model Accuracy')\n",
         "plt.ylabel('Accuracy')\n",
         "plt.xlabel('Epoch')\n",
         "plt.legend(['Train','Validation'], loc = 'best')\n",
@@ -213,7 +233,7 @@
         "\n",
         "plt.plot(history.history['loss'],color = 'red')\n",
         "plt.plot(history.history['val_loss'],color = 'blue')\n",
-        "plt.title('Model Loss')\n",
+        "plt.title('Densenet 121 Model Loss')\n",
         "plt.ylabel('Loss')\n",
         "plt.xlabel('Epoch')\n",
         "plt.legend(['Train','Validation'],loc = 'best')\n",
